[gd_scene load_steps=2 format=3 uid="uid://d6yn0z9o7rwxj"]

[ext_resource type="Script" path="res://scripts/leaderboard_screen.gd" id="1"]

[node name="LeaderboardScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.15, 0.15, 0.2, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 80
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "üèÜ Leaderboards"
horizontal_alignment = 1

[node name="TabContainer" type="TabContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Global" type="VBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer"]
layout_mode = 2
theme_override_constants/separation = 10
metadata/_tab_index = 0

[node name="RefreshButton" type="Button" parent="MarginContainer/VBoxContainer/TabContainer/Global"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = "üîÑ Refresh Global Leaderboard"

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer/TabContainer/Global"]
layout_mode = 2
size_flags_vertical = 3

[node name="EntriesList" type="VBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer/Global/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 5

[node name="Friends" type="VBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
theme_override_constants/separation = 10
metadata/_tab_index = 1

[node name="RefreshButton" type="Button" parent="MarginContainer/VBoxContainer/TabContainer/Friends"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = "üîÑ Refresh Friends Leaderboard"

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer/TabContainer/Friends"]
layout_mode = 2
size_flags_vertical = 3

[node name="EntriesList" type="VBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer/Friends/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 5

[node name="SubmitPanel" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/SubmitPanel"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 15

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/SubmitPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/SubmitPanel/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "Submit Score:"

[node name="ScoreInput" type="SpinBox" parent="MarginContainer/VBoxContainer/SubmitPanel/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
max_value = 999999.0
value = 1000.0

[node name="SubmitButton" type="Button" parent="MarginContainer/VBoxContainer/SubmitPanel/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
text = "üì§ Submit Score"

[node name="StatusLabel" type="Label" parent="MarginContainer/VBoxContainer/SubmitPanel/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = " "

[node name="BackButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 120.0
offset_bottom = 60.0
text = "‚Üê Back"

[connection signal="pressed" from="BackButton" to="." method="_on_back_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/TabContainer/Global/RefreshButton" to="." method="_on_refresh_global_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/TabContainer/Friends/RefreshButton" to="." method="_on_refresh_friends_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/SubmitPanel/MarginContainer/HBoxContainer/SubmitButton" to="." method="_on_submit_pressed"]
